--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bank-of-flatiron",
   "version": "0.1.0",
-  "homepage": "https://Riob-a.github.io/phase-2.Week1-Code.Challenge",
+  "homepage": "https://Riob-a.github.io/phase2Codechallenge1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
